--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
 					<input type="password" name="pw" placeholder="Enter Password">
 				</div>
 				<div class="group">
-					<a href="./home.html">Sign In</a>
+					<a href="./index.html">Sign In</a>
 				</div>
 				<div class="icons">
 					<a href="#">
