--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@
 					</div>
 				</div>
 				<div class="group ">
-					<a href="../home.html" class="Sign">sign Up</a>
+					<a href="../index.html" class="Sign">sign Up</a>
 				</div>
 				<div class="icons">
 					<a href="#">
