Handling links and adding poppins font-family

--- a/index.html
+++ b/index.html
@@ -107,17 +107,23 @@
 	</div>
 	<pre></pre>
 	<div class="grass" id="grass">
-		<img src="./img/computer/house3.jpg" height="414" alt="">
+		<div>
 
-		<img src="./img/computer/house3.jpg" height="414" alt="">
+			<img src="./img/computer/house3.jpg" height="414" alt="">
+			
+			<img src="./img/computer/house3.jpg" height="414" alt="">
+		</div>
 		<div class="in-grass">
 			<p style="color:silver"><b>Our Target</b></p>
 			<p>Competent Programmer is our Target.</p>
 			<p>Confident Developer is our Priority.</p>
 		</div>
-		<img src="./img/computer/house4.jpg" height="417" alt="">
+		<div>
 
-		<img src="./img/computer/house4.jpg" height="417" alt="">
+			<img src="./img/computer/house4.jpg" height="417" alt="">
+			
+			<img src="./img/computer/house4.jpg" height="417" alt="">
+		</div>
 	</div>
 	<div class="contact" id="contact">
 		<h2>Contact Us</h2>
